<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.braianledantes.elbardelafai.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_drinks"
        android:name="com.braianledantes.elbardelafai.ui.drinks.DrinksFragment"
        android:label="@string/title_drinks"
        tools:layout="@layout/fragment_drinks" />

    <fragment
        android:id="@+id/navigation_ingredients"
        android:name="com.braianledantes.elbardelafai.ui.ingredients.IngredientsFragment"
        android:label="@string/title_ingredients"
        tools:layout="@layout/fragment_ingredients" />
</navigation>